Also check the examples/ directory for style errors

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
 	-r{toxinidir}/tests/requirements.txt
 	flake8~=3.7.7
 	flake8-print~=3.1.0
-commands = flake8 flask_saml2/ tests/
+commands = flake8 flask_saml2/ tests/ examples/
 
 [testenv:isort]
 usedevelop = True
@@ -28,4 +28,4 @@ skipsdist = True
 deps =
 	-r{toxinidir}/tests/requirements.txt
 	isort
-commands = isort --recursive --check-only --diff flask_saml2/ tests/
+commands = isort --recursive --check-only --diff flask_saml2/ tests/ examples/
